[project]
name = "tasker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Ibad", email = "ibad3572@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tasker = "tasker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
